force-app/main/default/objects/Booking__c/fields/Booker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Booker_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact record for the person booking</description>
    <label>Booker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>