force-app/main/default/objects/Booking__c/fields/Booker_Email__c.field-meta.xml
<CustomField>
    <fullName>Booker_Email__c</fullName>
    <description>Email address of the person who booked</description>
    <label>Booker Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>