force-app/main/default/objects/Booking__c/fields/Booker_Name__c.field-meta.xml
<CustomField>
    <fullName>Booker_Name__c</fullName>
    <description>Name of the person who booked</description>
    <label>Booker Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>