force-app/main/default/objects/Booking__c/fields/Booker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Booker_Phone__c</fullName>
    <label>Booker Phone</label>
    <type>Phone</type>
</CustomField>