force-app/main/default/objects/Booking__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Reason provided when booking was cancelled</description>
    <label>Cancellation Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>