force-app/main/default/objects/Booking__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <description>Booking end date and time</description>
    <label>End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>