force-app/main/default/objects/Booking__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The event type that was booked</description>
    <label>Event Type</label>
    <referenceTo>Event_Type__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>