force-app/main/default/objects/Booking__c/fields/External_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Event_Id__c</fullName>
    <description>ID of the event created in the external calendar (Google/Outlook)</description>
    <externalId>true</externalId>
    <label>External Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>