force-app/main/default/objects/Booking__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <description>The assigned host user for this booking</description>
    <label>Host</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Bookings (Host)</relationshipLabel>
    <relationshipName>Bookings_Host</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>