force-app/main/default/objects/Booking__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Meeting location</description>
    <label>Location</label>
    <length>500</length>
    <type>Text</type>
</CustomField>