force-app/main/default/objects/Booking__c/fields/Recurring_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this booking to a recurring series</description>
    <label>Recurring Pattern</label>
    <referenceTo>Recurring_Pattern__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>