force-app/main/default/objects/Booking__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <description>Booking start date and time</description>
    <label>Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>