force-app/main/default/objects/Booking__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique public booking identifier</description>
    <externalId>true</externalId>
    <label>Booking UID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>