force-app/main/default/objects/Booking__c/fields/Video_Provider__c.field-meta.xml
<CustomField>
    <fullName>Video_Provider__c</fullName>
    <description>Video conferencing provider selected for this booking</description>
    <label>Video Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>None</label></value>
            <value><fullName>Zoom</fullName><default>false</default><label>Zoom</label></value>
            <value><fullName>Google_Meet</fullName><default>false</default><label>Google Meet</label></value>
            <value><fullName>Microsoft_Teams</fullName><default>false</default><label>Microsoft Teams</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>