force-app/main/default/objects/Booking__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <description>End time must be after start time</description>
    <errorConditionFormula>End_DateTime__c &lt;= Start_DateTime__c</errorConditionFormula>
    <errorDisplayField>End_DateTime__c</errorDisplayField>
    <errorMessage>End time must be after start time</errorMessage>
</ValidationRule>