force-app/main/default/objects/Booking__c/validationRules/Valid_Status_Transition.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Status_Transition</fullName>
    <active>true</active>
    <description>Prevents invalid booking status transitions</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    OR(
        AND(PRIORVALUE(Status__c) = "Cancelled", NOT(ISPICKVAL(Status__c, "Cancelled"))),
        AND(PRIORVALUE(Status__c) = "Rejected", NOT(ISPICKVAL(Status__c, "Rejected")))
    )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot change status from a terminal state (Cancelled or Rejected)</errorMessage>
</ValidationRule>